[tool.poetry]
name = "pancake_plugin"
version = "0.1.0"
description = "plugin for PancakeSwap"
authors = ["ca3-caaip"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
senkalib = {git = 'https://github.com/yuma300/senkalib.git', rev = '07367c98c236a954a8d284d19f87748295b10d72' }
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pyright = "^1.1.251"
black = "^22.3.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"